fix terminal alignment

--- a/assets/css/terminal.css
+++ b/assets/css/terminal.css
@@ -8,6 +8,9 @@
   overflow-x: auto;
   white-space: pre;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 #terminal:focus {
   outline: none;
